// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader should inject packages json data and update it when it changes 1`] = `
"/******/ (function(modules) { // webpackBootstrap
/******/ 	// The module cache
/******/ 	var installedModules = {};
/******/
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/
/******/ 		// Check if module is in cache
/******/ 		if(installedModules[moduleId]) {
/******/ 			return installedModules[moduleId].exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = installedModules[moduleId] = {
/******/ 			i: moduleId,
/******/ 			l: false,
/******/ 			exports: {}
/******/ 		};
/******/
/******/ 		// Execute the module function
/******/ 		modules[moduleId].call(module.exports, module, module.exports, __webpack_require__);
/******/
/******/ 		// Flag the module as loaded
/******/ 		module.l = true;
/******/
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/
/******/
/******/ 	// expose the modules object (__webpack_modules__)
/******/ 	__webpack_require__.m = modules;
/******/
/******/ 	// expose the module cache
/******/ 	__webpack_require__.c = installedModules;
/******/
/******/ 	// define getter function for harmony exports
/******/ 	__webpack_require__.d = function(exports, name, getter) {
/******/ 		if(!__webpack_require__.o(exports, name)) {
/******/ 			Object.defineProperty(exports, name, { enumerable: true, get: getter });
/******/ 		}
/******/ 	};
/******/
/******/ 	// define __esModule on exports
/******/ 	__webpack_require__.r = function(exports) {
/******/ 		if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 			Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 		}
/******/ 		Object.defineProperty(exports, '__esModule', { value: true });
/******/ 	};
/******/
/******/ 	// create a fake namespace object
/******/ 	// mode & 1: value is a module id, require it
/******/ 	// mode & 2: merge all properties of value into the ns
/******/ 	// mode & 4: return value when already ns object
/******/ 	// mode & 8|1: behave like require
/******/ 	__webpack_require__.t = function(value, mode) {
/******/ 		if(mode & 1) value = __webpack_require__(value);
/******/ 		if(mode & 8) return value;
/******/ 		if((mode & 4) && typeof value === 'object' && value && value.__esModule) return value;
/******/ 		var ns = Object.create(null);
/******/ 		__webpack_require__.r(ns);
/******/ 		Object.defineProperty(ns, 'default', { enumerable: true, value: value });
/******/ 		if(mode & 2 && typeof value != 'string') for(var key in value) __webpack_require__.d(ns, key, function(key) { return value[key]; }.bind(null, key));
/******/ 		return ns;
/******/ 	};
/******/
/******/ 	// getDefaultExport function for compatibility with non-harmony modules
/******/ 	__webpack_require__.n = function(module) {
/******/ 		var getter = module && module.__esModule ?
/******/ 			function getDefault() { return module['default']; } :
/******/ 			function getModuleExports() { return module; };
/******/ 		__webpack_require__.d(getter, 'a', getter);
/******/ 		return getter;
/******/ 	};
/******/
/******/ 	// Object.prototype.hasOwnProperty.call
/******/ 	__webpack_require__.o = function(object, property) { return Object.prototype.hasOwnProperty.call(object, property); };
/******/
/******/ 	// __webpack_public_path__
/******/ 	__webpack_require__.p = \\"\\";
/******/
/******/
/******/ 	// Load entry module and return exports
/******/ 	return __webpack_require__(__webpack_require__.s = 0);
/******/ })
/************************************************************************/
/******/ ([
/* 0 */
/***/ (function(module, exports, __webpack_require__) {

const packageJson = __webpack_require__(1);

const packageInfo = {
  packageJson,
  sourceModules: {},
  dependencies: {},
}

const ctx = __webpack_require__(2)

ctx.keys().forEach(key => {
  packageInfo.sourceModules[key] = () => ctx(key)
})

const packages = {};

packages[\\"lodash.isarraylike\\"] = {
  \\"name\\": \\"lodash.isarraylike\\",
  \\"version\\": \\"4.2.0\\",
  \\"description\\": \\"The lodash method \`_.isArrayLike\` exported as a module.\\",
  \\"homepage\\": \\"https://lodash.com/\\",
  \\"icon\\": \\"https://lodash.com/icon.svg\\",
  \\"license\\": \\"MIT\\",
  \\"keywords\\": \\"lodash-modularized, isarraylike\\",
  \\"author\\": \\"John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)\\",
  \\"contributors\\": [
    \\"John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)\\",
    \\"Blaine Bublitz <blaine.bublitz@gmail.com> (https://github.com/phated)\\",
    \\"Mathias Bynens <mathias@qiwi.be> (https://mathiasbynens.be/)\\"
  ],
  \\"repository\\": \\"lodash/lodash\\",
  \\"scripts\\": { \\"test\\": \\"echo \\\\\\"See https://travis-ci.org/lodash/lodash-cli for testing details.\\\\\\"\\" }
}

packages[\\"nanoid\\"] = {
  \\"name\\": \\"nanoid\\",
  \\"version\\": \\"2.0.3\\",
  \\"description\\": \\"A tiny (141 bytes), secure URL-friendly unique string ID generator\\",
  \\"keywords\\": [
    \\"uuid\\",
    \\"random\\",
    \\"id\\",
    \\"url\\"
  ],
  \\"author\\": \\"Andrey Sitnik <andrey@sitnik.ru>\\",
  \\"license\\": \\"MIT\\",
  \\"repository\\": \\"ai/nanoid\\",
  \\"browser\\": {
    \\"./index.js\\": \\"./index.browser.js\\",
    \\"./random.js\\": \\"./random.browser.js\\",
    \\"./async/index.js\\": \\"./async/index.browser.js\\",
    \\"./async/random.js\\": \\"./async/random.browser.js\\"
  },
  \\"sideEffects\\": false
}


module.exports = {
  packageJson,
  packages,
  packageInfo,
};


/***/ }),
/* 1 */
/***/ (function(module) {

module.exports = {\\"name\\":\\"project1\\",\\"version\\":\\"1.0.0\\",\\"main\\":\\"index.js\\",\\"license\\":\\"MIT\\",\\"dependencies\\":{\\"lodash.isarraylike\\":\\"^4.2.0\\"},\\"devDependencies\\":{\\"nanoid\\":\\"^2.0.3\\"}};

/***/ }),
/* 2 */
/***/ (function(module, exports, __webpack_require__) {

var map = {
	\\"./TestComponent.tsx\\": 3
};


function webpackContext(req) {
	var id = webpackContextResolve(req);
	return __webpack_require__(id);
}
function webpackContextResolve(req) {
	if(!__webpack_require__.o(map, req)) {
		var e = new Error(\\"Cannot find module '\\" + req + \\"'\\");
		e.code = 'MODULE_NOT_FOUND';
		throw e;
	}
	return map[req];
}
webpackContext.keys = function webpackContextKeys() {
	return Object.keys(map);
};
webpackContext.resolve = webpackContextResolve;
module.exports = webpackContext;
webpackContext.id = 2;

/***/ }),
/* 3 */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony export (binding) */ __webpack_require__.d(__webpack_exports__, \\"TestComponent\\", function() { return TestComponent; });
function TestComponent() {
    return null
}


/***/ })
/******/ ]);"
`;

exports[`loader should inject packages json data and update it when it changes 2`] = `
"/******/ (function(modules) { // webpackBootstrap
/******/ 	// The module cache
/******/ 	var installedModules = {};
/******/
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/
/******/ 		// Check if module is in cache
/******/ 		if(installedModules[moduleId]) {
/******/ 			return installedModules[moduleId].exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = installedModules[moduleId] = {
/******/ 			i: moduleId,
/******/ 			l: false,
/******/ 			exports: {}
/******/ 		};
/******/
/******/ 		// Execute the module function
/******/ 		modules[moduleId].call(module.exports, module, module.exports, __webpack_require__);
/******/
/******/ 		// Flag the module as loaded
/******/ 		module.l = true;
/******/
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/
/******/
/******/ 	// expose the modules object (__webpack_modules__)
/******/ 	__webpack_require__.m = modules;
/******/
/******/ 	// expose the module cache
/******/ 	__webpack_require__.c = installedModules;
/******/
/******/ 	// define getter function for harmony exports
/******/ 	__webpack_require__.d = function(exports, name, getter) {
/******/ 		if(!__webpack_require__.o(exports, name)) {
/******/ 			Object.defineProperty(exports, name, { enumerable: true, get: getter });
/******/ 		}
/******/ 	};
/******/
/******/ 	// define __esModule on exports
/******/ 	__webpack_require__.r = function(exports) {
/******/ 		if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 			Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 		}
/******/ 		Object.defineProperty(exports, '__esModule', { value: true });
/******/ 	};
/******/
/******/ 	// create a fake namespace object
/******/ 	// mode & 1: value is a module id, require it
/******/ 	// mode & 2: merge all properties of value into the ns
/******/ 	// mode & 4: return value when already ns object
/******/ 	// mode & 8|1: behave like require
/******/ 	__webpack_require__.t = function(value, mode) {
/******/ 		if(mode & 1) value = __webpack_require__(value);
/******/ 		if(mode & 8) return value;
/******/ 		if((mode & 4) && typeof value === 'object' && value && value.__esModule) return value;
/******/ 		var ns = Object.create(null);
/******/ 		__webpack_require__.r(ns);
/******/ 		Object.defineProperty(ns, 'default', { enumerable: true, value: value });
/******/ 		if(mode & 2 && typeof value != 'string') for(var key in value) __webpack_require__.d(ns, key, function(key) { return value[key]; }.bind(null, key));
/******/ 		return ns;
/******/ 	};
/******/
/******/ 	// getDefaultExport function for compatibility with non-harmony modules
/******/ 	__webpack_require__.n = function(module) {
/******/ 		var getter = module && module.__esModule ?
/******/ 			function getDefault() { return module['default']; } :
/******/ 			function getModuleExports() { return module; };
/******/ 		__webpack_require__.d(getter, 'a', getter);
/******/ 		return getter;
/******/ 	};
/******/
/******/ 	// Object.prototype.hasOwnProperty.call
/******/ 	__webpack_require__.o = function(object, property) { return Object.prototype.hasOwnProperty.call(object, property); };
/******/
/******/ 	// __webpack_public_path__
/******/ 	__webpack_require__.p = \\"\\";
/******/
/******/
/******/ 	// Load entry module and return exports
/******/ 	return __webpack_require__(__webpack_require__.s = 0);
/******/ })
/************************************************************************/
/******/ ([
/* 0 */
/***/ (function(module, exports, __webpack_require__) {

const packageJson = __webpack_require__(1);

const packageInfo = {
  packageJson,
  sourceModules: {},
  dependencies: {},
}

const ctx = __webpack_require__(2)

ctx.keys().forEach(key => {
  packageInfo.sourceModules[key] = () => ctx(key)
})

const packages = {};

packages[\\"lodash.isarraylike\\"] = {
  \\"name\\": \\"lodash.isarraylike\\",
  \\"version\\": \\"4.2.0\\",
  \\"description\\": \\"The lodash method \`_.isArrayLike\` exported as a module.\\",
  \\"homepage\\": \\"https://lodash.com/\\",
  \\"icon\\": \\"https://lodash.com/icon.svg\\",
  \\"license\\": \\"MIT\\",
  \\"keywords\\": \\"lodash-modularized, isarraylike\\",
  \\"author\\": \\"John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)\\",
  \\"contributors\\": [
    \\"John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)\\",
    \\"Blaine Bublitz <blaine.bublitz@gmail.com> (https://github.com/phated)\\",
    \\"Mathias Bynens <mathias@qiwi.be> (https://mathiasbynens.be/)\\"
  ],
  \\"repository\\": \\"lodash/lodash\\",
  \\"scripts\\": { \\"test\\": \\"echo \\\\\\"See https://travis-ci.org/lodash/lodash-cli for testing details.\\\\\\"\\" }
}

packages[\\"nanoid\\"] = { \\"name\\": \\"modified\\" }

module.exports = {
  packageJson,
  packages,
  packageInfo,
};


/***/ }),
/* 1 */
/***/ (function(module) {

module.exports = {\\"name\\":\\"project1\\",\\"version\\":\\"1.0.0\\",\\"main\\":\\"index.js\\",\\"license\\":\\"MIT\\",\\"dependencies\\":{\\"lodash.isarraylike\\":\\"^4.2.0\\"},\\"devDependencies\\":{\\"nanoid\\":\\"^2.0.3\\"}};

/***/ }),
/* 2 */
/***/ (function(module, exports, __webpack_require__) {

var map = {
	\\"./TestComponent.tsx\\": 3
};


function webpackContext(req) {
	var id = webpackContextResolve(req);
	return __webpack_require__(id);
}
function webpackContextResolve(req) {
	if(!__webpack_require__.o(map, req)) {
		var e = new Error(\\"Cannot find module '\\" + req + \\"'\\");
		e.code = 'MODULE_NOT_FOUND';
		throw e;
	}
	return map[req];
}
webpackContext.keys = function webpackContextKeys() {
	return Object.keys(map);
};
webpackContext.resolve = webpackContextResolve;
module.exports = webpackContext;
webpackContext.id = 2;

/***/ }),
/* 3 */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony export (binding) */ __webpack_require__.d(__webpack_exports__, \\"TestComponent\\", function() { return TestComponent; });
function TestComponent() {
    return null
}


/***/ })
/******/ ]);"
`;

exports[`loader should not re-read the packages data if nothing changed 1`] = `
"/******/ (function(modules) { // webpackBootstrap
/******/ 	// The module cache
/******/ 	var installedModules = {};
/******/
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/
/******/ 		// Check if module is in cache
/******/ 		if(installedModules[moduleId]) {
/******/ 			return installedModules[moduleId].exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = installedModules[moduleId] = {
/******/ 			i: moduleId,
/******/ 			l: false,
/******/ 			exports: {}
/******/ 		};
/******/
/******/ 		// Execute the module function
/******/ 		modules[moduleId].call(module.exports, module, module.exports, __webpack_require__);
/******/
/******/ 		// Flag the module as loaded
/******/ 		module.l = true;
/******/
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/
/******/
/******/ 	// expose the modules object (__webpack_modules__)
/******/ 	__webpack_require__.m = modules;
/******/
/******/ 	// expose the module cache
/******/ 	__webpack_require__.c = installedModules;
/******/
/******/ 	// define getter function for harmony exports
/******/ 	__webpack_require__.d = function(exports, name, getter) {
/******/ 		if(!__webpack_require__.o(exports, name)) {
/******/ 			Object.defineProperty(exports, name, { enumerable: true, get: getter });
/******/ 		}
/******/ 	};
/******/
/******/ 	// define __esModule on exports
/******/ 	__webpack_require__.r = function(exports) {
/******/ 		if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 			Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 		}
/******/ 		Object.defineProperty(exports, '__esModule', { value: true });
/******/ 	};
/******/
/******/ 	// create a fake namespace object
/******/ 	// mode & 1: value is a module id, require it
/******/ 	// mode & 2: merge all properties of value into the ns
/******/ 	// mode & 4: return value when already ns object
/******/ 	// mode & 8|1: behave like require
/******/ 	__webpack_require__.t = function(value, mode) {
/******/ 		if(mode & 1) value = __webpack_require__(value);
/******/ 		if(mode & 8) return value;
/******/ 		if((mode & 4) && typeof value === 'object' && value && value.__esModule) return value;
/******/ 		var ns = Object.create(null);
/******/ 		__webpack_require__.r(ns);
/******/ 		Object.defineProperty(ns, 'default', { enumerable: true, value: value });
/******/ 		if(mode & 2 && typeof value != 'string') for(var key in value) __webpack_require__.d(ns, key, function(key) { return value[key]; }.bind(null, key));
/******/ 		return ns;
/******/ 	};
/******/
/******/ 	// getDefaultExport function for compatibility with non-harmony modules
/******/ 	__webpack_require__.n = function(module) {
/******/ 		var getter = module && module.__esModule ?
/******/ 			function getDefault() { return module['default']; } :
/******/ 			function getModuleExports() { return module; };
/******/ 		__webpack_require__.d(getter, 'a', getter);
/******/ 		return getter;
/******/ 	};
/******/
/******/ 	// Object.prototype.hasOwnProperty.call
/******/ 	__webpack_require__.o = function(object, property) { return Object.prototype.hasOwnProperty.call(object, property); };
/******/
/******/ 	// __webpack_public_path__
/******/ 	__webpack_require__.p = \\"\\";
/******/
/******/
/******/ 	// Load entry module and return exports
/******/ 	return __webpack_require__(__webpack_require__.s = 0);
/******/ })
/************************************************************************/
/******/ ([
/* 0 */
/***/ (function(module, exports, __webpack_require__) {

const packageJson = __webpack_require__(1);

const packageInfo = {
  packageJson,
  sourceModules: {},
  dependencies: {},
}

const ctx = __webpack_require__(2)

ctx.keys().forEach(key => {
  packageInfo.sourceModules[key] = () => ctx(key)
})

const packages = {};

packages[\\"lodash.isarraylike\\"] = {
  \\"name\\": \\"lodash.isarraylike\\",
  \\"version\\": \\"4.2.0\\",
  \\"description\\": \\"The lodash method \`_.isArrayLike\` exported as a module.\\",
  \\"homepage\\": \\"https://lodash.com/\\",
  \\"icon\\": \\"https://lodash.com/icon.svg\\",
  \\"license\\": \\"MIT\\",
  \\"keywords\\": \\"lodash-modularized, isarraylike\\",
  \\"author\\": \\"John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)\\",
  \\"contributors\\": [
    \\"John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)\\",
    \\"Blaine Bublitz <blaine.bublitz@gmail.com> (https://github.com/phated)\\",
    \\"Mathias Bynens <mathias@qiwi.be> (https://mathiasbynens.be/)\\"
  ],
  \\"repository\\": \\"lodash/lodash\\",
  \\"scripts\\": { \\"test\\": \\"echo \\\\\\"See https://travis-ci.org/lodash/lodash-cli for testing details.\\\\\\"\\" }
}

packages[\\"nanoid\\"] = {
  \\"name\\": \\"nanoid\\",
  \\"version\\": \\"2.0.3\\",
  \\"description\\": \\"A tiny (141 bytes), secure URL-friendly unique string ID generator\\",
  \\"keywords\\": [
    \\"uuid\\",
    \\"random\\",
    \\"id\\",
    \\"url\\"
  ],
  \\"author\\": \\"Andrey Sitnik <andrey@sitnik.ru>\\",
  \\"license\\": \\"MIT\\",
  \\"repository\\": \\"ai/nanoid\\",
  \\"browser\\": {
    \\"./index.js\\": \\"./index.browser.js\\",
    \\"./random.js\\": \\"./random.browser.js\\",
    \\"./async/index.js\\": \\"./async/index.browser.js\\",
    \\"./async/random.js\\": \\"./async/random.browser.js\\"
  },
  \\"sideEffects\\": false
}


module.exports = {
  packageJson,
  packages,
  packageInfo,
};


/***/ }),
/* 1 */
/***/ (function(module) {

module.exports = {\\"name\\":\\"project1\\",\\"version\\":\\"1.0.0\\",\\"main\\":\\"index.js\\",\\"license\\":\\"MIT\\",\\"dependencies\\":{\\"lodash.isarraylike\\":\\"^4.2.0\\"},\\"devDependencies\\":{\\"nanoid\\":\\"^2.0.3\\"}};

/***/ }),
/* 2 */
/***/ (function(module, exports, __webpack_require__) {

var map = {
	\\"./TestComponent.tsx\\": 3
};


function webpackContext(req) {
	var id = webpackContextResolve(req);
	return __webpack_require__(id);
}
function webpackContextResolve(req) {
	if(!__webpack_require__.o(map, req)) {
		var e = new Error(\\"Cannot find module '\\" + req + \\"'\\");
		e.code = 'MODULE_NOT_FOUND';
		throw e;
	}
	return map[req];
}
webpackContext.keys = function webpackContextKeys() {
	return Object.keys(map);
};
webpackContext.resolve = webpackContextResolve;
module.exports = webpackContext;
webpackContext.id = 2;

/***/ }),
/* 3 */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony export (binding) */ __webpack_require__.d(__webpack_exports__, \\"TestComponent\\", function() { return TestComponent; });
function TestComponent() {
    return null
}


/***/ })
/******/ ]);"
`;

exports[`loader should not re-read the packages data if nothing changed 2`] = `
"/******/ (function(modules) { // webpackBootstrap
/******/ 	// The module cache
/******/ 	var installedModules = {};
/******/
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/
/******/ 		// Check if module is in cache
/******/ 		if(installedModules[moduleId]) {
/******/ 			return installedModules[moduleId].exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = installedModules[moduleId] = {
/******/ 			i: moduleId,
/******/ 			l: false,
/******/ 			exports: {}
/******/ 		};
/******/
/******/ 		// Execute the module function
/******/ 		modules[moduleId].call(module.exports, module, module.exports, __webpack_require__);
/******/
/******/ 		// Flag the module as loaded
/******/ 		module.l = true;
/******/
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/
/******/
/******/ 	// expose the modules object (__webpack_modules__)
/******/ 	__webpack_require__.m = modules;
/******/
/******/ 	// expose the module cache
/******/ 	__webpack_require__.c = installedModules;
/******/
/******/ 	// define getter function for harmony exports
/******/ 	__webpack_require__.d = function(exports, name, getter) {
/******/ 		if(!__webpack_require__.o(exports, name)) {
/******/ 			Object.defineProperty(exports, name, { enumerable: true, get: getter });
/******/ 		}
/******/ 	};
/******/
/******/ 	// define __esModule on exports
/******/ 	__webpack_require__.r = function(exports) {
/******/ 		if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 			Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 		}
/******/ 		Object.defineProperty(exports, '__esModule', { value: true });
/******/ 	};
/******/
/******/ 	// create a fake namespace object
/******/ 	// mode & 1: value is a module id, require it
/******/ 	// mode & 2: merge all properties of value into the ns
/******/ 	// mode & 4: return value when already ns object
/******/ 	// mode & 8|1: behave like require
/******/ 	__webpack_require__.t = function(value, mode) {
/******/ 		if(mode & 1) value = __webpack_require__(value);
/******/ 		if(mode & 8) return value;
/******/ 		if((mode & 4) && typeof value === 'object' && value && value.__esModule) return value;
/******/ 		var ns = Object.create(null);
/******/ 		__webpack_require__.r(ns);
/******/ 		Object.defineProperty(ns, 'default', { enumerable: true, value: value });
/******/ 		if(mode & 2 && typeof value != 'string') for(var key in value) __webpack_require__.d(ns, key, function(key) { return value[key]; }.bind(null, key));
/******/ 		return ns;
/******/ 	};
/******/
/******/ 	// getDefaultExport function for compatibility with non-harmony modules
/******/ 	__webpack_require__.n = function(module) {
/******/ 		var getter = module && module.__esModule ?
/******/ 			function getDefault() { return module['default']; } :
/******/ 			function getModuleExports() { return module; };
/******/ 		__webpack_require__.d(getter, 'a', getter);
/******/ 		return getter;
/******/ 	};
/******/
/******/ 	// Object.prototype.hasOwnProperty.call
/******/ 	__webpack_require__.o = function(object, property) { return Object.prototype.hasOwnProperty.call(object, property); };
/******/
/******/ 	// __webpack_public_path__
/******/ 	__webpack_require__.p = \\"\\";
/******/
/******/
/******/ 	// Load entry module and return exports
/******/ 	return __webpack_require__(__webpack_require__.s = 0);
/******/ })
/************************************************************************/
/******/ ([
/* 0 */
/***/ (function(module, exports, __webpack_require__) {

const packageJson = __webpack_require__(1);

const packageInfo = {
  packageJson,
  sourceModules: {},
  dependencies: {},
}

const ctx = __webpack_require__(2)

ctx.keys().forEach(key => {
  packageInfo.sourceModules[key] = () => ctx(key)
})

const packages = {};

packages[\\"lodash.isarraylike\\"] = {
  \\"name\\": \\"lodash.isarraylike\\",
  \\"version\\": \\"4.2.0\\",
  \\"description\\": \\"The lodash method \`_.isArrayLike\` exported as a module.\\",
  \\"homepage\\": \\"https://lodash.com/\\",
  \\"icon\\": \\"https://lodash.com/icon.svg\\",
  \\"license\\": \\"MIT\\",
  \\"keywords\\": \\"lodash-modularized, isarraylike\\",
  \\"author\\": \\"John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)\\",
  \\"contributors\\": [
    \\"John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)\\",
    \\"Blaine Bublitz <blaine.bublitz@gmail.com> (https://github.com/phated)\\",
    \\"Mathias Bynens <mathias@qiwi.be> (https://mathiasbynens.be/)\\"
  ],
  \\"repository\\": \\"lodash/lodash\\",
  \\"scripts\\": { \\"test\\": \\"echo \\\\\\"See https://travis-ci.org/lodash/lodash-cli for testing details.\\\\\\"\\" }
}

packages[\\"nanoid\\"] = {
  \\"name\\": \\"nanoid\\",
  \\"version\\": \\"2.0.3\\",
  \\"description\\": \\"A tiny (141 bytes), secure URL-friendly unique string ID generator\\",
  \\"keywords\\": [
    \\"uuid\\",
    \\"random\\",
    \\"id\\",
    \\"url\\"
  ],
  \\"author\\": \\"Andrey Sitnik <andrey@sitnik.ru>\\",
  \\"license\\": \\"MIT\\",
  \\"repository\\": \\"ai/nanoid\\",
  \\"browser\\": {
    \\"./index.js\\": \\"./index.browser.js\\",
    \\"./random.js\\": \\"./random.browser.js\\",
    \\"./async/index.js\\": \\"./async/index.browser.js\\",
    \\"./async/random.js\\": \\"./async/random.browser.js\\"
  },
  \\"sideEffects\\": false
}


module.exports = {
  packageJson,
  packages,
  packageInfo,
};


/***/ }),
/* 1 */
/***/ (function(module) {

module.exports = {\\"name\\":\\"project1\\",\\"version\\":\\"1.0.0\\",\\"main\\":\\"index.js\\",\\"license\\":\\"MIT\\",\\"dependencies\\":{\\"lodash.isarraylike\\":\\"^4.2.0\\"},\\"devDependencies\\":{\\"nanoid\\":\\"^2.0.3\\"}};

/***/ }),
/* 2 */
/***/ (function(module, exports, __webpack_require__) {

var map = {
	\\"./TestComponent.tsx\\": 3
};


function webpackContext(req) {
	var id = webpackContextResolve(req);
	return __webpack_require__(id);
}
function webpackContextResolve(req) {
	if(!__webpack_require__.o(map, req)) {
		var e = new Error(\\"Cannot find module '\\" + req + \\"'\\");
		e.code = 'MODULE_NOT_FOUND';
		throw e;
	}
	return map[req];
}
webpackContext.keys = function webpackContextKeys() {
	return Object.keys(map);
};
webpackContext.resolve = webpackContextResolve;
module.exports = webpackContext;
webpackContext.id = 2;

/***/ }),
/* 3 */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony export (binding) */ __webpack_require__.d(__webpack_exports__, \\"TestComponent\\", function() { return TestComponent; });
function TestComponent() {
    return null
}


/***/ })
/******/ ]);"
`;

exports[`loader should update packages data when package.json changes 1`] = `
"/******/ (function(modules) { // webpackBootstrap
/******/ 	// The module cache
/******/ 	var installedModules = {};
/******/
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/
/******/ 		// Check if module is in cache
/******/ 		if(installedModules[moduleId]) {
/******/ 			return installedModules[moduleId].exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = installedModules[moduleId] = {
/******/ 			i: moduleId,
/******/ 			l: false,
/******/ 			exports: {}
/******/ 		};
/******/
/******/ 		// Execute the module function
/******/ 		modules[moduleId].call(module.exports, module, module.exports, __webpack_require__);
/******/
/******/ 		// Flag the module as loaded
/******/ 		module.l = true;
/******/
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/
/******/
/******/ 	// expose the modules object (__webpack_modules__)
/******/ 	__webpack_require__.m = modules;
/******/
/******/ 	// expose the module cache
/******/ 	__webpack_require__.c = installedModules;
/******/
/******/ 	// define getter function for harmony exports
/******/ 	__webpack_require__.d = function(exports, name, getter) {
/******/ 		if(!__webpack_require__.o(exports, name)) {
/******/ 			Object.defineProperty(exports, name, { enumerable: true, get: getter });
/******/ 		}
/******/ 	};
/******/
/******/ 	// define __esModule on exports
/******/ 	__webpack_require__.r = function(exports) {
/******/ 		if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 			Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 		}
/******/ 		Object.defineProperty(exports, '__esModule', { value: true });
/******/ 	};
/******/
/******/ 	// create a fake namespace object
/******/ 	// mode & 1: value is a module id, require it
/******/ 	// mode & 2: merge all properties of value into the ns
/******/ 	// mode & 4: return value when already ns object
/******/ 	// mode & 8|1: behave like require
/******/ 	__webpack_require__.t = function(value, mode) {
/******/ 		if(mode & 1) value = __webpack_require__(value);
/******/ 		if(mode & 8) return value;
/******/ 		if((mode & 4) && typeof value === 'object' && value && value.__esModule) return value;
/******/ 		var ns = Object.create(null);
/******/ 		__webpack_require__.r(ns);
/******/ 		Object.defineProperty(ns, 'default', { enumerable: true, value: value });
/******/ 		if(mode & 2 && typeof value != 'string') for(var key in value) __webpack_require__.d(ns, key, function(key) { return value[key]; }.bind(null, key));
/******/ 		return ns;
/******/ 	};
/******/
/******/ 	// getDefaultExport function for compatibility with non-harmony modules
/******/ 	__webpack_require__.n = function(module) {
/******/ 		var getter = module && module.__esModule ?
/******/ 			function getDefault() { return module['default']; } :
/******/ 			function getModuleExports() { return module; };
/******/ 		__webpack_require__.d(getter, 'a', getter);
/******/ 		return getter;
/******/ 	};
/******/
/******/ 	// Object.prototype.hasOwnProperty.call
/******/ 	__webpack_require__.o = function(object, property) { return Object.prototype.hasOwnProperty.call(object, property); };
/******/
/******/ 	// __webpack_public_path__
/******/ 	__webpack_require__.p = \\"\\";
/******/
/******/
/******/ 	// Load entry module and return exports
/******/ 	return __webpack_require__(__webpack_require__.s = 0);
/******/ })
/************************************************************************/
/******/ ([
/* 0 */
/***/ (function(module, exports, __webpack_require__) {

const packageJson = __webpack_require__(1);

const packageInfo = {
  packageJson,
  sourceModules: {},
  dependencies: {},
}

const ctx = __webpack_require__(2)

ctx.keys().forEach(key => {
  packageInfo.sourceModules[key] = () => ctx(key)
})

const packages = {};

packages[\\"lodash.isarraylike\\"] = {
  \\"name\\": \\"lodash.isarraylike\\",
  \\"version\\": \\"4.2.0\\",
  \\"description\\": \\"The lodash method \`_.isArrayLike\` exported as a module.\\",
  \\"homepage\\": \\"https://lodash.com/\\",
  \\"icon\\": \\"https://lodash.com/icon.svg\\",
  \\"license\\": \\"MIT\\",
  \\"keywords\\": \\"lodash-modularized, isarraylike\\",
  \\"author\\": \\"John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)\\",
  \\"contributors\\": [
    \\"John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)\\",
    \\"Blaine Bublitz <blaine.bublitz@gmail.com> (https://github.com/phated)\\",
    \\"Mathias Bynens <mathias@qiwi.be> (https://mathiasbynens.be/)\\"
  ],
  \\"repository\\": \\"lodash/lodash\\",
  \\"scripts\\": { \\"test\\": \\"echo \\\\\\"See https://travis-ci.org/lodash/lodash-cli for testing details.\\\\\\"\\" }
}

packages[\\"nanoid\\"] = {
  \\"name\\": \\"nanoid\\",
  \\"version\\": \\"2.0.3\\",
  \\"description\\": \\"A tiny (141 bytes), secure URL-friendly unique string ID generator\\",
  \\"keywords\\": [
    \\"uuid\\",
    \\"random\\",
    \\"id\\",
    \\"url\\"
  ],
  \\"author\\": \\"Andrey Sitnik <andrey@sitnik.ru>\\",
  \\"license\\": \\"MIT\\",
  \\"repository\\": \\"ai/nanoid\\",
  \\"browser\\": {
    \\"./index.js\\": \\"./index.browser.js\\",
    \\"./random.js\\": \\"./random.browser.js\\",
    \\"./async/index.js\\": \\"./async/index.browser.js\\",
    \\"./async/random.js\\": \\"./async/random.browser.js\\"
  },
  \\"sideEffects\\": false
}


module.exports = {
  packageJson,
  packages,
  packageInfo,
};


/***/ }),
/* 1 */
/***/ (function(module) {

module.exports = {\\"name\\":\\"project1\\",\\"version\\":\\"1.0.0\\",\\"main\\":\\"index.js\\",\\"license\\":\\"MIT\\",\\"dependencies\\":{\\"lodash.isarraylike\\":\\"^4.2.0\\"},\\"devDependencies\\":{\\"nanoid\\":\\"^2.0.3\\"}};

/***/ }),
/* 2 */
/***/ (function(module, exports, __webpack_require__) {

var map = {
	\\"./TestComponent.tsx\\": 3
};


function webpackContext(req) {
	var id = webpackContextResolve(req);
	return __webpack_require__(id);
}
function webpackContextResolve(req) {
	if(!__webpack_require__.o(map, req)) {
		var e = new Error(\\"Cannot find module '\\" + req + \\"'\\");
		e.code = 'MODULE_NOT_FOUND';
		throw e;
	}
	return map[req];
}
webpackContext.keys = function webpackContextKeys() {
	return Object.keys(map);
};
webpackContext.resolve = webpackContextResolve;
module.exports = webpackContext;
webpackContext.id = 2;

/***/ }),
/* 3 */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony export (binding) */ __webpack_require__.d(__webpack_exports__, \\"TestComponent\\", function() { return TestComponent; });
function TestComponent() {
    return null
}


/***/ })
/******/ ]);"
`;

exports[`loader should update packages data when package.json changes 2`] = `
"/******/ (function(modules) { // webpackBootstrap
/******/ 	// The module cache
/******/ 	var installedModules = {};
/******/
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/
/******/ 		// Check if module is in cache
/******/ 		if(installedModules[moduleId]) {
/******/ 			return installedModules[moduleId].exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = installedModules[moduleId] = {
/******/ 			i: moduleId,
/******/ 			l: false,
/******/ 			exports: {}
/******/ 		};
/******/
/******/ 		// Execute the module function
/******/ 		modules[moduleId].call(module.exports, module, module.exports, __webpack_require__);
/******/
/******/ 		// Flag the module as loaded
/******/ 		module.l = true;
/******/
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/
/******/
/******/ 	// expose the modules object (__webpack_modules__)
/******/ 	__webpack_require__.m = modules;
/******/
/******/ 	// expose the module cache
/******/ 	__webpack_require__.c = installedModules;
/******/
/******/ 	// define getter function for harmony exports
/******/ 	__webpack_require__.d = function(exports, name, getter) {
/******/ 		if(!__webpack_require__.o(exports, name)) {
/******/ 			Object.defineProperty(exports, name, { enumerable: true, get: getter });
/******/ 		}
/******/ 	};
/******/
/******/ 	// define __esModule on exports
/******/ 	__webpack_require__.r = function(exports) {
/******/ 		if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 			Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 		}
/******/ 		Object.defineProperty(exports, '__esModule', { value: true });
/******/ 	};
/******/
/******/ 	// create a fake namespace object
/******/ 	// mode & 1: value is a module id, require it
/******/ 	// mode & 2: merge all properties of value into the ns
/******/ 	// mode & 4: return value when already ns object
/******/ 	// mode & 8|1: behave like require
/******/ 	__webpack_require__.t = function(value, mode) {
/******/ 		if(mode & 1) value = __webpack_require__(value);
/******/ 		if(mode & 8) return value;
/******/ 		if((mode & 4) && typeof value === 'object' && value && value.__esModule) return value;
/******/ 		var ns = Object.create(null);
/******/ 		__webpack_require__.r(ns);
/******/ 		Object.defineProperty(ns, 'default', { enumerable: true, value: value });
/******/ 		if(mode & 2 && typeof value != 'string') for(var key in value) __webpack_require__.d(ns, key, function(key) { return value[key]; }.bind(null, key));
/******/ 		return ns;
/******/ 	};
/******/
/******/ 	// getDefaultExport function for compatibility with non-harmony modules
/******/ 	__webpack_require__.n = function(module) {
/******/ 		var getter = module && module.__esModule ?
/******/ 			function getDefault() { return module['default']; } :
/******/ 			function getModuleExports() { return module; };
/******/ 		__webpack_require__.d(getter, 'a', getter);
/******/ 		return getter;
/******/ 	};
/******/
/******/ 	// Object.prototype.hasOwnProperty.call
/******/ 	__webpack_require__.o = function(object, property) { return Object.prototype.hasOwnProperty.call(object, property); };
/******/
/******/ 	// __webpack_public_path__
/******/ 	__webpack_require__.p = \\"\\";
/******/
/******/
/******/ 	// Load entry module and return exports
/******/ 	return __webpack_require__(__webpack_require__.s = 0);
/******/ })
/************************************************************************/
/******/ ([
/* 0 */
/***/ (function(module, exports, __webpack_require__) {

const packageJson = __webpack_require__(1);

const packageInfo = {
  packageJson,
  sourceModules: {},
  dependencies: {},
}

const ctx = __webpack_require__(2)

ctx.keys().forEach(key => {
  packageInfo.sourceModules[key] = () => ctx(key)
})

const packages = {};

packages[\\"lodash.isarraylike\\"] = {
  \\"name\\": \\"lodash.isarraylike\\",
  \\"version\\": \\"4.2.0\\",
  \\"description\\": \\"The lodash method \`_.isArrayLike\` exported as a module.\\",
  \\"homepage\\": \\"https://lodash.com/\\",
  \\"icon\\": \\"https://lodash.com/icon.svg\\",
  \\"license\\": \\"MIT\\",
  \\"keywords\\": \\"lodash-modularized, isarraylike\\",
  \\"author\\": \\"John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)\\",
  \\"contributors\\": [
    \\"John-David Dalton <john.david.dalton@gmail.com> (http://allyoucanleet.com/)\\",
    \\"Blaine Bublitz <blaine.bublitz@gmail.com> (https://github.com/phated)\\",
    \\"Mathias Bynens <mathias@qiwi.be> (https://mathiasbynens.be/)\\"
  ],
  \\"repository\\": \\"lodash/lodash\\",
  \\"scripts\\": { \\"test\\": \\"echo \\\\\\"See https://travis-ci.org/lodash/lodash-cli for testing details.\\\\\\"\\" }
}


module.exports = {
  packageJson,
  packages,
  packageInfo,
};


/***/ }),
/* 1 */
/***/ (function(module) {

module.exports = {\\"name\\":\\"project1\\",\\"version\\":\\"1.0.0\\",\\"main\\":\\"index.js\\",\\"license\\":\\"MIT\\",\\"dependencies\\":{\\"lodash.isarraylike\\":\\"^4.2.0\\"}};

/***/ }),
/* 2 */
/***/ (function(module, exports, __webpack_require__) {

var map = {
	\\"./TestComponent.tsx\\": 3
};


function webpackContext(req) {
	var id = webpackContextResolve(req);
	return __webpack_require__(id);
}
function webpackContextResolve(req) {
	if(!__webpack_require__.o(map, req)) {
		var e = new Error(\\"Cannot find module '\\" + req + \\"'\\");
		e.code = 'MODULE_NOT_FOUND';
		throw e;
	}
	return map[req];
}
webpackContext.keys = function webpackContextKeys() {
	return Object.keys(map);
};
webpackContext.resolve = webpackContextResolve;
module.exports = webpackContext;
webpackContext.id = 2;

/***/ }),
/* 3 */
/***/ (function(module, __webpack_exports__, __webpack_require__) {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony export (binding) */ __webpack_require__.d(__webpack_exports__, \\"TestComponent\\", function() { return TestComponent; });
function TestComponent() {
    return null
}


/***/ })
/******/ ]);"
`;
